// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--help (dist) > palm --help 1`] = `
"Usage: palm <verb> [kind] [names...] [options]

Package manager for agent resources: skills, agents, instructions, commands,
hooks, MCP servers and plugins.

Verbs:
  install (add, i)                install entities or register an origin
  uninstall (remove, rm, delete)  remove entities or unregister an origin
  get (list, ls)                  list installed entities, origins, targets
  describe (info)                 show one entity, origin or target
  update (up)                     update entities or refresh origin indexes
  create (new)                    create a skill, agent, instruction or command
  search                          search origins and the MCP registry

Utilities:
  init                            create palm.yaml for this project
  doctor                          check git, node, harnesses, drift, origins
  outdated [kind]                 show current, wanted and latest refs
  why <kind> <name>               show why an entity is installed
  find <path>                     show which entity wrote a file
  audit [kind] [names...]         scan installed files for hidden Unicode
  config                          read or change global settings
  completion <shell>              print a shell completion script
  cache                           show or clear the origin cache
  help [command]                  show help for a verb or utility

Options:
  -g, --global                    use the global scope (~), not this project
  -t, --target <ids>              targets: claude,codex,copilot,cursor
  --dry-run                       show what would change; write nothing
  --force                         overwrite files palm does not own
  -y, --yes                       accept defaults instead of prompting
  --offline                       use cached origins only; no network
  --verbose                       debug output and stack traces
  --json                          JSON on stdout; everything else on stderr
  --no-color                      no colours (also NO_COLOR=1)
  -V, --version                   print the palm version
  -h, --help                      display help for command

Kinds: skill (sk), agent (ag), instruction (ins), command (cmd), hook (hk), mcp, plugin (pl),
       origin (orig), target (tg), all. Plurals work too: palm get skills.

Examples:
  palm install origin mattpocock/skills
  palm get skills --available
  palm install skill tdd@mattpocock
  palm describe skill tdd
  palm uninstall skill tdd

Run palm <verb> --help for the forms each verb accepts.
Exit codes: 0 ok, 1 failure, 2 usage error, 130 cancelled, 70 internal error."
`;

exports[`--help (dist) > palm audit --help 1`] = `
"Usage: palm audit [options] [kind] [names...]

Scan the files palm installed for hidden Unicode (bidi overrides, tag
characters, zero-width characters) and for changes since install.

Arguments:
  kind                skill, agent, instruction, command, hook, mcp, plugin
                      (plurals and short names work); omit it for every kind
  names               only these entities

Options:
  --strip             remove the hidden characters from the files
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Without -g the project and the global scope are scanned. Exit 1 while a critical finding
(bidi override, tag character) remains.

Examples:
  palm audit                                scan what palm installed for hidden Unicode
  palm audit skills tdd                     one skill
  palm audit --strip                        remove the hidden characters it finds
  palm audit -g --json                      the global scope only, as JSON"
`;

exports[`--help (dist) > palm cache --help 1`] = `
"Usage: palm cache [options] [command]

Show or clear palm’s cache of origin checkouts and indexes.

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Commands:
  info                Cache path, size, checkouts and index files.
  clean               Remove every checkout and index (origins stay registered;
                      next use refetches).
  help [command]      display help for command

Examples:
  palm cache info                           where the cache is and how big
  palm cache clean --yes                    remove checkouts and indexes (origins stay)"
`;

exports[`--help (dist) > palm completion --help 1`] = `
"Usage: palm completion [options] <shell>

Print a completion script for bash, zsh or fish, generated from this command
tree.

Arguments:
  shell               bash, zsh or fish

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Install:
  bash   echo 'source <(palm completion bash)' >> ~/.bashrc
  zsh    echo 'source <(palm completion zsh)' >> ~/.zshrc     (after compinit)
  fish   palm completion fish > ~/.config/fish/completions/palm.fish

Examples:
  palm completion bash
  palm completion zsh > "\${fpath[1]}/_palm""
`;

exports[`--help (dist) > palm config --help 1`] = `
"Usage: palm config [options] [command]

Read or change palm’s global config: targets, mcpRegistryUrl, secrets.project,
secrets.global.

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Commands:
  get [key]           Print one config value, or all of them.
  set <key> <value>   Set a config value (an empty value unsets it).
  help [command]      display help for command

Examples:
  palm config get
  palm config set targets claude,codex
  palm config set secrets.project literal"
`;

exports[`--help (dist) > palm create --help 1`] = `
"Usage: palm create|new [options] [kind] [names...]

Create a skill, agent, instruction or command.

Arguments:
  kind                skill, agent, instruction, command (plurals and short
                      names work)
  names               name[@origin][#ref]

Options:
  --no-install        only write the file; do not install it
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Examples:
  palm create skill release-notes
  palm create agent code-reviewer -g
  palm create instruction ts-style --no-install
  palm new command changelog"
`;

exports[`--help (dist) > palm describe --help 1`] = `
"Usage: palm describe|info [options] [kind] [names...]

Show one entity, origin or target.

Arguments:
  kind                          skill, agent, instruction, command, hook, mcp,
                                plugin, origin, target (plurals and short names
                                work)
  names                         name[@origin][#ref]

Options:
  -o, --origin <name-or-alias>  only this origin: alias, owner/repo[/root], URL
                                or local path (installed entities also: mine,
                                registry, adhoc)
  -h, --help                    display help for command

Global Options:
  -g, --global                  use the global scope (~), not this project
  -t, --target <ids>            targets: claude,codex,copilot,cursor
  --dry-run                     show what would change; write nothing
  --force                       overwrite files palm does not own
  -y, --yes                     accept defaults instead of prompting
  --offline                     use cached origins only; no network
  --verbose                     debug output and stack traces
  --json                        JSON on stdout; everything else on stderr
  --no-color                    no colours (also NO_COLOR=1)
  -V, --version                 print the palm version

Examples:
  palm describe skill tdd                   origin, version, dependencies, files per harness
  palm describe agent comment-sicko@pstack
  palm describe origin mattpocock           url, ref, sha, layout, counts, cache path
  palm describe target claude -g            where each kind goes at the global scope"
`;

exports[`--help (dist) > palm doctor --help 1`] = `
"Usage: palm doctor [options]

Check git and Node, palm home, harness detection, lock/manifest drift and origin
reachability (skipped with --offline).

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Examples:
  palm doctor
  palm doctor --offline --json"
`;

exports[`--help (dist) > palm find --help 1`] = `
"Usage: palm find [options] <path>

Show which installed entity wrote a file (or merged a fragment into it).

Arguments:
  path                file or directory palm wrote

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

The path may be absolute, ~/…, or relative to this directory or the scope root. Without -g
the project and the global lockfile are searched. Exit 1 when no entity wrote the path.

Examples:
  palm find .claude/skills/tdd/SKILL.md     the entity that wrote it
  palm find .mcp.json                       merged config: every entity with a fragment in it
  palm find ~/.codex/AGENTS.md -g --json    global scope only, as JSON"
`;

exports[`--help (dist) > palm get --help 1`] = `
"Usage: palm get|list [options] [kind] [names...]

List installed entities, origins, targets.

Arguments:
  kind                          skill, agent, instruction, command, hook, mcp,
                                plugin, origin, target, all (plurals and short
                                names work); omit it for every installed entity
  names                         name[@origin][#ref]

Options:
  --available                   list what your origins offer instead of what is
                                installed
  -o, --origin <name-or-alias>  only this origin: alias, owner/repo[/root], URL
                                or local path (installed entities also: mine,
                                registry, adhoc)
  -h, --help                    display help for command

Global Options:
  -g, --global                  use the global scope (~), not this project
  -t, --target <ids>            targets: claude,codex,copilot,cursor
  --dry-run                     show what would change; write nothing
  --force                       overwrite files palm does not own
  -y, --yes                     accept defaults instead of prompting
  --offline                     use cached origins only; no network
  --verbose                     debug output and stack traces
  --json                        JSON on stdout; everything else on stderr
  --no-color                    no colours (also NO_COLOR=1)
  -V, --version                 print the palm version

Examples:
  palm get                                  everything installed in this project
  palm get skills                           installed skills
  palm get sk --available -o mattpocock     what one origin offers
  palm get origins                          registered origins and what they hold
  palm get targets                          the harnesses palm writes to, and why
  palm get all -g                           installed entities, origins and targets"
`;

exports[`--help (dist) > palm init --help 1`] = `
"Usage: palm init [options]

Choose the targets for this project, write them to palm.yaml and ignore .palm/.

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Examples:
  palm init
  palm init --target claude,codex"
`;

exports[`--help (dist) > palm install --help 1`] = `
"Usage: palm install|add [options] [kind] [names...]

Install entities or register an origin.

Arguments:
  kind                  skill, agent, instruction, command, hook, mcp, plugin,
                        origin (plurals and short names work); omit it to search
                        every entity kind
  names                 name[@origin][#ref]

Options:
  --from <origin>       take the entities from this origin spec without
                        registering it
  --save-origin         register the --from origin
  --secrets <policy>    MCP secrets: env-ref (project default) or literal (-g
                        default)
  --prune               no names only: remove installed entries no longer in
                        palm.yaml
  --frozen              no names only: install exactly what palm.lock.yaml
                        records; fail on any difference, write nothing
  -h, --help            display help for command

Ad hoc MCP server options:
  --url <url>           HTTP/SSE endpoint
  --header <K=V>        HTTP header (repeatable)
  --env <K=V>           environment variable (repeatable)
  --transport <t>       stdio, http or sse

Origin options (install origin):
  --alias <alias>       short name used in name@alias (default: repo name)
  --ref <ref>           tag, branch or sha (default: latest semver tag, else
                        default branch)
  --root <path>         subdirectory that is the origin root
  --layout <kind=glob>  layout descriptor instead of auto-detection, e.g.
                        skills='skills/.curated/*' (repeatable; kinds: skills,
                        agents, commands, instructions, hooks, mcp, exclude,
                        include; or nameFrom=dirname)
  --project             save the origin in this project’s palm.yaml instead of
                        the global config

Global Options:
  -g, --global          use the global scope (~), not this project
  -t, --target <ids>    targets: claude,codex,copilot,cursor
  --dry-run             show what would change; write nothing
  --force               overwrite files palm does not own
  -y, --yes             accept defaults instead of prompting
  --offline             use cached origins only; no network
  --verbose             debug output and stack traces
  --json                JSON on stdout; everything else on stderr
  --no-color            no colours (also NO_COLOR=1)
  -V, --version         print the palm version

Names: name[@origin][#ref]
  name       entity name (skill directory, agent file, MCP server key, plugin name)
  @origin    origin alias from \`palm get origins\` (needed when several origins have the name)
  #ref       tag, branch or commit of that origin (default: its latest semver tag)
  MCP registry servers go by their registry name: palm install mcp io.github.upstash/context7

Origins: palm install origin <spec> [--alias a] [--ref r] [--root dir] [--layout kind=glob]
  <spec>     owner/repo, owner/repo/sub/dir, github:owner/repo, git URL[#ref], local path,
             or a marketplace.json (path or URL) whose plugins become origins
  The origin is fetched and indexed first; nothing is saved when that fails.

Ad hoc MCP servers (no origin needed):
  palm install mcp <name> [--env K=V]... -- <command> [args...]
  palm install mcp <name> --url <url> [--header K=V]... [--transport http|sse]
  \${VAR} in values stays an environment reference (env-ref) or is filled in (literal).

Examples:
  palm install origin mattpocock/skills          register an origin
  palm install skill tdd@mattpocock              one skill from one origin
  palm install skills grill-me wayfinder         several of one kind
  palm install plugin superpowers -g             into your home directory
  palm install mcp fs -- npx -y @modelcontextprotocol/server-filesystem .
  palm install mcp docs --url https://example.com/mcp --header "Authorization=Bearer \${DOCS_TOKEN}"
  palm install                                   everything palm.yaml lists"
`;

exports[`--help (dist) > palm outdated --help 1`] = `
"Usage: palm outdated [options] [kind]

Show, for each direct install, the locked ref, the ref palm.yaml wants now and
the latest release.

Arguments:
  kind                skill, agent, instruction, command, hook, mcp, plugin
                      (plurals and short names work); omit it for every kind

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Columns:
  current    the ref palm.lock.yaml records
  wanted     what palm.yaml's #ref resolves to now: a tag, a branch head, or the newest tag
             in a semver range (#^1.2, #~1.2); no #ref: the latest release
  latest     the newest release tag, else the default branch head
Reads remote refs only (git ls-remote); the cache is never taken as current.

Examples:
  palm outdated                             every direct install in this project
  palm outdated skills                      skills only
  palm outdated -g --json                   global installs, as JSON"
`;

exports[`--help (dist) > palm search --help 1`] = `
"Usage: palm search [options] [kind] [names...]

Search origins and the MCP registry.

Arguments:
  kind                          skill, agent, instruction, command, hook, mcp,
                                plugin (plurals and short names work)
  names                         words to look for

Options:
  --kind <kind>                 restrict to one kind (same as the kind word)
  -o, --origin <name-or-alias>  only this origin: alias, owner/repo[/root], URL
                                or local path (installed entities also: mine,
                                registry, adhoc)
  --refresh                     refetch origins before searching
  -h, --help                    display help for command

Global Options:
  -g, --global                  use the global scope (~), not this project
  -t, --target <ids>            targets: claude,codex,copilot,cursor
  --dry-run                     show what would change; write nothing
  --force                       overwrite files palm does not own
  -y, --yes                     accept defaults instead of prompting
  --offline                     use cached origins only; no network
  --verbose                     debug output and stack traces
  --json                        JSON on stdout; everything else on stderr
  --no-color                    no colours (also NO_COLOR=1)
  -V, --version                 print the palm version

Examples:
  palm search tdd
  palm search skill review                  skills only
  palm search mcp github                    MCP servers, the MCP registry included
  palm search refactor -o mattpocock        one origin"
`;

exports[`--help (dist) > palm uninstall --help 1`] = `
"Usage: palm uninstall|remove [options] [kind] [names...]

Remove entities or unregister an origin.

Arguments:
  kind                skill, agent, instruction, command, hook, mcp, plugin,
                      origin (plurals and short names work); omit it to match
                      every entity kind
  names               name[@origin][#ref]

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Files you changed since palm wrote them stay on disk (listed); --force removes them too.

Examples:
  palm uninstall skill tdd                  remove a skill and what nothing else needs
  palm uninstall skills tdd wayfinder       several of one kind
  palm rm plugin superpowers -g             from the global scope
  palm uninstall skill tdd --force          also delete files you edited
  palm uninstall origin pstack              unregister an origin (installed entities stay)"
`;

exports[`--help (dist) > palm update --help 1`] = `
"Usage: palm update|up [options] [kind] [names...]

Update entities or refresh origin indexes.

Arguments:
  kind                skill, agent, instruction, command, hook, mcp, plugin,
                      origin (plurals and short names work); omit it for
                      everything installed
  names               name[@origin][#ref]

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Prints the plan first (~ updated, + added, - removed, = unchanged, x failed, and files you
changed that an update would overwrite), then asks before applying (default No). Without a
terminal, --yes is required.

Examples:
  palm update                               everything installed in this project
  palm update skills                        every directly installed skill
  palm update skill tdd --dry-run           show the plan only
  palm update --yes                         apply without asking (scripts, CI)
  palm update origins                       refetch and rescan every origin
  palm update origin mattpocock             one origin"
`;

exports[`--help (dist) > palm why --help 1`] = `
"Usage: palm why [options] <kind> <name>

Show why an entity is installed: palm.yaml, or the plugin or agent that pulled
it in, and what still needs it.

Arguments:
  kind                skill, agent, instruction, command, hook, mcp, plugin
                      (plurals and short names work)
  name                name[@origin]

Options:
  -h, --help          display help for command

Global Options:
  -g, --global        use the global scope (~), not this project
  -t, --target <ids>  targets: claude,codex,copilot,cursor
  --dry-run           show what would change; write nothing
  --force             overwrite files palm does not own
  -y, --yes           accept defaults instead of prompting
  --offline           use cached origins only; no network
  --verbose           debug output and stack traces
  --json              JSON on stdout; everything else on stderr
  --no-color          no colours (also NO_COLOR=1)
  -V, --version       print the palm version

Examples:
  palm why skill brainstorm                 the plugin or agent that pulled it in
  palm why skill tdd@mattpocock             one origin's copy
  palm why mcp docs -g --json               in the global scope, as JSON"
`;
